Update: adjust git dockerfile

--- a/runner/dockerfile
+++ b/runner/dockerfile
@@ -1,9 +1,18 @@
 FROM locustio/locust:2.24.0
 
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+# Become root for setup
+USER root
+
+RUN apt-get update \
+ && apt-get install -y git \
+ && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /runner
+
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
+# Drop privileges for runtime
+USER locust
 
 ENTRYPOINT ["/entrypoint.sh"]
