--- a/runner/dockerfile
+++ b/runner/dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update \
 COPY requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
-COPY deploy/locust-base/entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 USER locust
